<resources>

    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="app_name">Hotel Pickup</string>
    <string name="settingsLabel">Settings</string>
    <string name="toolsLabel">Tools</string>
    <string name="startLabel">Start</string>
    <string name="loadingEventsLabel">Loading events</string>
    <string name="allowableEventsLabel">Allowable events</string>
    <string name="enterAPIURLLabel">Enter the api url</string>
    <string name="cameraToUseLabel">Camera to use for scan</string>
    <string name="minimumBarCodeCharactersLabel">Minimum barcode characters</string>
    <string name="smsAPIURLLabel">Enter the sms api url</string>
    <string name="saveSettingsLabel">Save Settings</string>
    <string name="scanKeyTagLabel">Scan KeyCard</string>
    <string name="jammedTrafficHeaderLabel">"We are experiencing delays in service."</string>
    <string name="jammedTrafficHeaderLabel1">"Please enter guest's mobile number (example: +965 98765432)"</string>
    <string name="phoneNumberLabel">"Guest's Mobile Number"</string>
    <string name="submitLabel">Submit</string>
    <string name="scanBarCodeLabel">Enter / Scan Barcode</string>
    <string name="stringItemPlaceHolderLabel">String item</string>
    <string name="blankItemLabel" />
</resources>
